; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/s390/crypto/extr_ap_bus.c_ap_increase_queue_count.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/s390/crypto/extr_ap_bus.c_ap_increase_queue_count.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ap_device = type { i32, i32, i32, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

@jiffies = common dso_local global i64 0, align 8
@AP_RESET_ARMED = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ap_device*)* @ap_increase_queue_count to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ap_increase_queue_count(%struct.ap_device* %0) #0 {
  %2 = alloca %struct.ap_device*, align 8
  %3 = alloca i32, align 4
  store %struct.ap_device* %0, %struct.ap_device** %2, align 8
  %4 = load %struct.ap_device*, %struct.ap_device** %2, align 8
  %5 = getelementptr inbounds %struct.ap_device, %struct.ap_device* %4, i32 0, i32 3
  %6 = load %struct.TYPE_2__*, %struct.TYPE_2__** %5, align 8
  %7 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  store i32 %8, i32* %3, align 4
  %9 = load %struct.ap_device*, %struct.ap_device** %2, align 8
  %10 = getelementptr inbounds %struct.ap_device, %struct.ap_device* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 8
  %12 = add nsw i32 %11, 1
  store i32 %12, i32* %10, align 8
  %13 = load %struct.ap_device*, %struct.ap_device** %2, align 8
  %14 = getelementptr inbounds %struct.ap_device, %struct.ap_device* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 8
  %16 = icmp eq i32 %15, 1
  br i1 %16, label %17, label %28

17:                                               ; preds = %1
  %18 = load %struct.ap_device*, %struct.ap_device** %2, align 8
  %19 = getelementptr inbounds %struct.ap_device, %struct.ap_device* %18, i32 0, i32 2
  %20 = load i64, i64* @jiffies, align 8
  %21 = load i32, i32* %3, align 4
  %22 = sext i32 %21 to i64
  %23 = add nsw i64 %20, %22
  %24 = call i32 @mod_timer(i32* %19, i64 %23)
  %25 = load i32, i32* @AP_RESET_ARMED, align 4
  %26 = load %struct.ap_device*, %struct.ap_device** %2, align 8
  %27 = getelementptr inbounds %struct.ap_device, %struct.ap_device* %26, i32 0, i32 1
  store i32 %25, i32* %27, align 4
  br label %28

28:                                               ; preds = %17, %1
  ret void
}

declare dso_local i32 @mod_timer(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
